--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-<div class="el-circle-wrapper">
-    <div class="el-circle">
-        <span class="el-circle-weekday">WED</span>
-        <span class="el-circle-date">15</span>
-        <span class="el-circle-month">APR</span>
-        <span class="el-circle-icon"></span>
+<div class="content">
+    <div class="mod-date">
+        <div class="submod-circle-date">
+            <span class="el-circle-weekday">WED</span>
+            <span class="el-circle-date">15</span>
+            <span class="el-circle-month">APR</span>
+            <span class="el-circle-icon">&nbsp;</span>
+        </div>
+        <span class="el-circle-time">10:30am - 11:00am</span>
     </div>
-    <span class="el-circle-time">10:30am - 11:00am</span>
 </div>
 </body>
 </html>
