Date and time-range javascript

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hardhat Test</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
 <div class="content">
     <div class="mod-date">
         <div class="submod-circle-date">
-            <span class="el-circle-weekday">WED</span>
-            <span class="el-circle-date">15</span>
-            <span class="el-circle-month">APR</span>
+            <span id="el-circle-weekday" class="el-circle-weekday">WED</span>
+            <span id="el-circle-date" class="el-circle-date">15</span>
+            <span id="el-circle-month" class="el-circle-month">APR</span>
             <span class="el-circle-icon">&nbsp;</span>
         </div>
-        <span class="el-circle-time">10:30am - 11:00am</span>
+        <span id="el-circle-time" class="el-circle-time">10:30am - 11:00am</span>
     </div>
 </div>
 </body>
